      
0.17-beta0  2/06/01  1st Beta. 
                     - Changed name of FixedDataFormat to FloatDataFormat.
                     - Removed ExponentialDataFormat, functionality now in FloatDataFormat.
                     - Binary write data enabled.
                     - Octal/hex data read/write enabled.
                     - Changed internal code to more consistent use of constants. This 
                       should make us more able to meet changed in the DTD in the future and
                       lower errors.
                     - Jaxp compatiblity. SAX1 remains in use however.
                     - added setData methods for Double, Integer objects to DataCube and Array. 
                       Fixed some of the internal logic (but still needs more work).
                     - Fixed bug in locator.hasNext method. Was droping last value in dataCube
                       from consideration.
                     - Added append array functionality.
      
0.17-beta0_1 3/28/01  bug fix
                      - bug in BaseObject class that caused crash for certain toXMLOutputStream 
                        calls (private field XMLNotationHash not properly declared). FIXED. 

0.17-beta1   5/??/01  - Added BaseObjectWithXMLElements class. Array, Field, Structure, Axis
                        classes may now hold new XMLElements.
                      - Re-added writeAxisOrder stuff to XMLDataIOStyle classes. Fixed write
                        bug. 
                      - Added many Interface classes for those classes which seem most likely to
                        be customized in new (derived) XDF dataformats.
                      - Added XDF base object structure class. This class represents the top
                        level structure in an XDF object and (hopefully) clarifies some 
                        confusion over the nature of structure objects in general.
                      = Added get/set Long/Short Data methods in DataCube.
