@@ -59,5 +59,7 @@
                       - Added XDF base object structure class. This class represents the top
                         level structure in an XDF object and (hopefully) clarifies some 
                         confusion over the nature of structure objects in general.
-                      = Added get/set Long/Short Data methods in DataCube.
+                      - Added get/set Long/Short Data methods in DataCube.
+                      - Higher dimesional arrays not implemented correctly (!! in 3+ dimensions). Fixed.
+                      - Added get/setIOAxesOrder in XMLDataIOStyle.
 
